--- a/todo-app/config/config.json
+++ b/todo-app/config/config.json
@@ -1,14 +1,14 @@
 {
   "development": {
     "username": "postgres",
-    "password": "postgres",
+    "password": "pasword",
     "database": "wd-todo-dev",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": "postgres",
+    "password": "password",
     "database": "wd-todo-test",
     "host": "127.0.0.1",
     "dialect": "postgres"
