--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -22,5 +22,8 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "supertest": "^6.3.3"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
