--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon -e js,ejs",
+    "start:prod": "node index.js",
     "test": "jest",
     "prepare": "cd .. && husky install todo-app/.husky"
   },
@@ -21,6 +23,7 @@
     "eslint": "^8.56.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
   },
   "dependencies": {
