--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon -e js,ejs",
     "start:prod": "node index.js",
+    "pretest":"NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
     "test": "jest",
     "prepare": "cd .. && husky install todo-app/.husky"
   },
@@ -28,6 +29,8 @@
   },
   "dependencies": {
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "sequelize": "^6.35.2"
+
   }
 }
