--- a/todo-app/config/config.json
+++ b/todo-app/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "pasword",
+    "password": "password",
     "database": "wd-todo-dev",
     "host": "127.0.0.1",
     "dialect": "postgres"
