--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "^8.56.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
@@ -28,6 +29,8 @@
     "supertest": "^6.3.3"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "pg": "^8.11.3",
