--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -35,6 +35,7 @@
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
